# SnakeGame

./: .gitignore  CMakeLists.txt  README.md
data/: melhor_cerebro.txt
include/: bot_genetico.h  cobra.h  jogo.h  rede_neural.h  treinador.h
scripts/: comp_treinar.sh  gerar_mapa.py  play.sh
src/: bot_genetico.cpp  bot_play.cpp  jogo.cpp  play.cpp  rede_neural.cpp  treinador.cpp  treinar.cpp
